Fix card layout by adding relative positioning to improve element alignment

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -256,6 +256,7 @@ ul.row{
     display: block;
     text-decoration: none;
     padding-top: 45%;
+    position: relative;
 }
 .card-title a::after, .card-work a::after{
     position: absolute;
